add TypeScript and tslint to project

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,9 +5,12 @@
             "name": "Launch Chrome against localhost, with sourcemaps",
             "type": "chrome",
             "request": "launch",
-            "url": "http://localhost:4000/counter.html",
+            "url": "http://localhost:4000",
             "sourceMaps": true,
-            "webRoot": "${workspaceRoot}"
+            "webRoot": "${workspaceRoot}",
+            "sourceMapPathOverrides": {
+                "webpack:///./*":   "${webRoot}/client/*"
+            }
         },
         {
             "name": "Attach to Chrome, with sourcemaps",
@@ -15,7 +18,10 @@
             "request": "attach",
             "port": 9222,
             "sourceMaps": true,
-            "webRoot": "${workspaceRoot}/src"
+            "webRoot": "${workspaceRoot}/src",
+            "sourceMapPathOverrides": {
+                "webpack:///./*":   "${webRoot}/client/*"
+            }
         },
         {
             "name": "Launch Karma debug page",
