--- a/package.json
+++ b/package.json
@@ -26,13 +26,18 @@
     "webdriver:start": "webdriver-manager start",
     "test": "jest --config=jest.json",
     "test:watch": "jest --config=jest.json --watch",
-    "test:coverage": "jest --config=jest.json --coverage"
+    "test:coverage": "jest --config=jest.json --coverage",
+    "postinstall": "typings i"
   },
   "author": "Elger van Boxtel",
   "license": "Public",
   "dependencies": {
-    "angular": "1.6.0",
-    "angular-ui-router": "^0.3.2",
+    "@types/angular": "1.5.21",
+    "@types/angular-mocks": "1.5.0",
+    "@types/angular-ui-router": "1.1.35",
+    "angular": "1.5.9",
+    "angular-mocks": "1.6.0",
+    "angular-ui-router": "0.3.2",
     "babel-register": "6.18.0",
     "copy-webpack-plugin": "4.0.1",
     "css-mqpacker": "5.0.1",
@@ -40,8 +45,11 @@
     "html-webpack-plugin": "2.24.1",
     "postcss-cssnext": "2.9.0",
     "stylelint-webpack-plugin": "0.4.0",
-    "typescript": "^2.1.4",
-    "typings": "^2.0.0",
+    "ts-loader": "1.3.2",
+    "tslint": "^4.1.1",
+    "tslint-loader": "3.3.0",
+    "typescript": "2.1.4",
+    "typings": "2.0.0",
     "webdriver-manager": "10.2.10",
     "webdriverio": "4.4.0",
     "webpack": "1.13.3",
@@ -63,6 +71,7 @@
     "eslint-plugin-import": "2.2.0",
     "htmlhint-loader": "1.0.0",
     "jest": "17.0.3",
+    "ng-annotate-loader": "^0.2.0",
     "node-sass": "3.13.0",
     "phantomjs-prebuilt": "2.1.13",
     "postcss-loader": "1.2.0",
